# snippet

./: .gitignore
asm/: Makefile.header  clean
asm/rep/: Makefile  rep1.s
bash/: build-erlang.sh  build-llvm.sh
bash/config/: .bashrc  .vimrc
bash/rocm-scripts/: build-all.sh  build-comgr.sh  build-libhsakmt.sh  build-llvm.sh  build-rocclr.sh  build-rocm-device-libs.sh  build-rocr.sh  common.sh
bash/script/: clang-install.sh  force-apt-get.sh  net_connect.sh
bash/vimconfig/: .vimrc
c/TLPI/ch06/: id.c  (+3 more)
c/drm-tutorial/: Makefile  modeset_single_buffer.cpp
c/inside-sqlite3/: CMakeLists.txt  cmd.c  multidb.c  open.c  thread1.c
c/tun-tap/: Makefile  README.md  tun.c
cpp/ProfessionalCUDA/: CMakeLists.txt
cpp/ProfessionalCUDA/ch01/: CMakeLists.txt  Makefile  hello.cu
cpp/ProfessionalCUDA/ch02/: CMakeLists.txt  checkDeviceInfo.cu  sumArraysOnGPU.cu  sumMatrixOnGPU-2D-grid-2D-block.cu
cpp/ProfessionalCUDA/ch03/: CMakeLists.txt  nestedHelloWorld.cu  reduce.cu  simpleDivergence.cu  sumMatrix.cu
cpp/ProfessionalCUDA/common/: CMakeLists.txt  common.h  timer.cpp
cpp/RayTracingInOneWeekend/: CMakeLists.txt  ch01.cpp  ch02.cpp  ch03.cpp  ray.h  vec3.h
cpp/SDL/: draw_pixel.cc
cpp/amdgpu_test/: CMakeLists.txt  amdgpu_bo.cc  amdgpu_bo.h  amdgpu_context.cc  amdgpu_context.h  amdgpu_device.cc  amdgpu_device.h  basic_test.cc  basic_test.h  bo_test.cc  bo_test.h  result.h  result_test.cc
cpp/amdgpu_test/cmake/: googletest.cmake
cpp/bo-exporter/: Makefile  exporter  exporter.cc  importer  importer.cc  util.cc  util.h
cpp/boost/asio/tutorial/tcp/: CMakeLists.txt  async_server.cpp  chat_server.cpp  client.cpp  server.cpp
cpp/codelab/db/TPMMS/: CMakeLists.txt  Makefile  gen_record.cpp  record.cpp  record.h  run.sh  sort.cpp  sort.record  timer.cpp  timer.h
cpp/cpp-stdlib/: CMakeLists.txt  optional.cc  test.cc  test.h  variant.cc
cpp/cuda-by-example/: CMakeLists.txt
cpp/gpgpu-programming/: CMakeLists.txt
cpp/gpu-computing-gems/: CMakeLists.txt
cpp/gpu-computing-gems/ch04/: CMakeLists.txt  main.cu
cpp/grpc/myecho/: CMakeLists.txt  client.cpp  echo.pb.cc  echo.pb.h  echo.proto  myrpc.cpp  myrpc.h  rpc_meta.pb.cc  rpc_meta.pb.h  rpc_meta.proto  server.cpp
cpp/kfdtest/: CMakeLists.txt  KFDBaseComponentTest.cpp  KFDBaseComponentTest.h  KFDTestUtil.h
cpp/libdrm_test/: CMakeLists.txt  amdgpu_bo.cpp  amdgpu_bo.h  amdgpu_device.cpp  amdgpu_device.h  amdgpu_test.cpp  amdgpu_test.h  amdgpu_util.cpp  amdgpu_util.h  basic_tests.cpp  basic_tests.h  main.cpp  packet_common.cpp  packet_common.h  pm4.cpp  pm4.h  pm4_packet.cpp  pm4_packet.h  pm4_pkt_struct.h  sdma_packet.cpp  sdma_packet.h  sdma_pkt_struct.h  vm_tests.cpp  vm_tests.h
cpp/libjit/: CMakeLists.txt  t1.c  t2.c  t3.c  t4.cpp  t5.c
cpp/llvm/Kaleidoscope/: CMakeLists.txt  codegen.cpp  codegen.h  error.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h
cpp/llvm/TestLib/Pass/: CMakeLists.txt  OpcodeCounter.cpp
cpp/llvm/TestLib/Pass/LegacyPassManager/: CMakeLists.txt  LegacyHelloWorld.cpp
cpp/llvm/TestLib/Pass/PassManager/: CMakeLists.txt  HelloWorld.cpp
cpp/llvm/llvm_essentials/ch04/: CMakeLists.txt  build.sh  toy.cpp
cpp/llvm/llvm_essentials/ch04/test/: test.c
cpp/muduo/twisted/: CMakeLists.txt  finger01.cc  finger02.cc  finger03.cc  finger04.cc  finger05.cc  finger06.cc  finger07.cc
cpp/opengl/learnopengl.com/: CMakeLists.txt  install-dependencies.sh
cpp/opengl/learnopengl.com/BasicLighting/: BasicLighting.cc  CMakeLists.txt
cpp/opengl/learnopengl.com/Blending/: BlendingDiscard.cc  BlendingSorted.cc  CMakeLists.txt
cpp/opengl/learnopengl.com/Camera/: CMakeLists.txt  Camera.cc
cpp/opengl/learnopengl.com/Colors/: CMakeLists.txt  Colors.cc
cpp/opengl/learnopengl.com/Common/: CMakeLists.txt  Camera.h  Context.cc  Context.h  Mesh.cc  Mesh.h  Model.cc  Model.h  Object.cc  Object.h  Result.h  Shader.cc  Shader.h  ShaderManager.cc  ShaderManager.h  Texture2D.cc  Texture2D.h  Timer.cc
cpp/opengl/learnopengl.com/CoordinateSystems/: CMakeLists.txt  CoordinateSystems.cc
cpp/opengl/learnopengl.com/GettingStarted/: CMakeLists.txt
cpp/opengl/learnopengl.com/GettingStarted/HelloTriangle/: CMakeLists.txt  Exercise1.cc  Exercise2.cc  Exercise3.cc  hello_triangle.cc
cpp/opengl/learnopengl.com/GettingStarted/HelloWindow/: hello_window.cc
cpp/opengl/learnopengl.com/GettingStarted/Shader/: Exercise1.cc  Exercise3.cc  inout.cc
cpp/opengl/learnopengl.com/LightCasters/: CMakeLists.txt  LightCasters.cc
cpp/opengl/learnopengl.com/LightingMaps/: CMakeLists.txt  LightingMaps.cc
cpp/opengl/learnopengl.com/Materials/: CMakeLists.txt  Materials.cc
cpp/opengl/learnopengl.com/Model/: CMakeLists.txt  Model.cc
cpp/opengl/learnopengl.com/Resources/Shader/: BasicLighting_Frag.glsl  BasicLighting_Vertex.glsl  Blending_Frag.glsl  Blending_Vertex.glsl  LightCaster_Frag.glsl  LightingMaps_Frag.glsl  LightingMaps_Vertex.glsl  Materials_Frag.glsl  Model_Loading_Frag.glsl  Model_Loading_Vertex.glsl  StencilTest_Frag.glsl  Stencil_SingleColor_Frag.glsl
cpp/opengl/learnopengl.com/Shader/: CMakeLists.txt  Exercise2.cc  discolor.cc
cpp/opengl/learnopengl.com/StencilTest/: CMakeLists.txt  StencilTest.cc
cpp/opengl/learnopengl.com/Textures/: CMakeLists.txt  Textures.cc
cpp/opengl/learnopengl.com/Transformations/: CMakeLists.txt  Transformations.cc
cpp/opengl/ogldev/: CMakeLists.txt  indirect-draw.cpp  transform-feedback-example1.cpp  tutorial01.cpp  tutorial02.cpp  tutorial04.cpp  tutorial05.cpp  tutorial06.cpp  tutorial07.cpp  tutorial08.cpp  tutorial09.cpp  tutorial10.cpp  tutorial14.cpp  util.cpp  util.h
cpp/opengl/ogldev/shaders/transform-feedback/: example1.vert
cpp/opengl/ogldev/shaders/tutorial04/: shader.frag  shader.vert
cpp/opengl/ogldev/shaders/tutorial05/: shader.vert
cpp/opengl/ogldev/shaders/tutorial06/: shader.vert
cpp/opengl/ogldev/shaders/tutorial09/: shader.vert
cpp/opengl/ogldev/shaders/tutorial14/: shader.vert
cpp/xserver-test/drm-demo/: CMakeLists.txt  double_buffer.cc  single_buffer.cc
elixir/no_slides/: .gitignore  README.md  mix.exs
elixir/ping_pong/: mix.exs
(+842 files in other folders)
