cmake_minimum_required(VERSION 3.10)
project(opengl)

set(CMAKE_CXX_STANDARD 17)

include_directories(Common)
add_subdirectory(Common)
add_subdirectory(GettingStarted)
add_subdirectory(Textures)
add_subdirectory(Transformations)
add_subdirectory(CoordinateSystems)
add_subdirectory(Camera)
add_subdirectory(Colors)
add_subdirectory(BasicLighting)
add_subdirectory(Materials)
add_subdirectory(LightingMaps)
add_subdirectory(LightCasters)