cmake_minimum_required(VERSION 3.16)
project(ogldev)

set(CMAKE_CXX_STANDARD 20)

find_package(glm REQUIRED NO_MODULE)

add_library(util STATIC util.cpp)
add_executable(tutorial01 tutorial01.cpp)
target_link_libraries(tutorial01 GL glut)
add_executable(tutorial02 tutorial02.cpp)
target_link_libraries(tutorial02 GL GLEW glut)
add_executable(tutorial04 tutorial04.cpp)
target_link_libraries(tutorial04 util GL GLEW glut)
add_executable(tutorial05 tutorial05.cpp)
target_link_libraries(tutorial05 util GL GLEW glut)
add_executable(tutorial06 tutorial06.cpp)
target_link_libraries(tutorial06 util GL GLEW glut)
add_executable(tutorial07 tutorial07.cpp)
target_link_libraries(tutorial07 util GL GLEW glut)
